# pretix-header-injector

./: LICENSE  MANIFEST.in  Makefile  README.md  README.rst  pretixplugin.toml  pyproject.toml  setup.cfg  setup.py  signals.py
pretix_header_injector/: __init__.py  apps.py  settings.html  signals.py  urls.py  views.py
pretix_header_injector/locale/de_Informal/LC_MESSAGES/: django.po
pretix_header_injector/templates/pretix_header_injector/: settings.html
