[project]
name = "pretix-header-injector"
dynamic = ["version"]
description = "Injects custom code into the HTML head of event pages."
readme = "README.md"
license = {text = "Apache"}
keywords = ["pretix"]
authors = [
    {name = "Your Name", email = "your@email.com"},
]
maintainers = [
    {name = "Your Name", email = "your@email.com"},
]
dependencies = []

[project.entry-points."pretix.plugin"]
pretix_header_injector = "pretix_header_injector.apps:PluginApp"

[project.entry-points."distutils.commands"]
build = "pretix_plugin_build.build:CustomBuild"

[build-system]
requires = [
    "setuptools",
    "pretix-plugin-build",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "pretix_header_injector.__version__"}

[tool.setuptools.packages.find]
include = ["pretix_header_injector*"]
namespaces = false
